--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Alphavantage MCP server"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "bump2version>=1.0.1",
     "load-dotenv>=0.1.0",
     "mcp>=1.0.0",
 ]
@@ -16,5 +17,8 @@ email = "cesar.alvernaz@gmail.com"
 requires = [ "hatchling",]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/alphavantage_mcp_server"]
+
 [project.scripts]
-alphavantage = "mcp_server_alphavantage:main"
+alphavantage = "alphavantage_mcp_sever:main"
