--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,3 +2,7 @@
 current_version = 0.3.0
 commit = True
 tag = True
+
+[bumpversion:file:pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
