--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,13 @@ dependencies = [
     "load-dotenv>=0.1.0",
     "mcp>=1.9.4",
     "toml>=0.10.2",
-    "starlette>=0.27.0",
-    "uvicorn>=0.24.0",
-    "pytest-asyncio>=1.0.0",
-    "openai>=1.90.0",
+    "starlette>=0.47.2",
+    "uvicorn>=0.32.1",
+    "pytest-asyncio>=0.24.0",
+    "openai>=1.58.1",
+    "PyJWT>=2.10.1",
+    "httpx>=0.28.1",
+    "requests>=2.32.0",
 ]
 [[project.authors]]
 name = "Cesar Alvernaz"
@@ -29,7 +32,7 @@ packages = ["src/alphavantage_mcp_server"]
 [dependency-groups]
 dev = [
     "pytest>=8.4.1",
-    "pytest-asyncio>=1.0.0",
+    "pytest-asyncio>=0.24.0",
     "ruff>=0.9.9",
 ]
 
