--- a/.gitignore
+++ b/.gitignore
@@ -302,3 +302,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 windsurfrules.md
+
+
+deploy/aws-chalice/vendor
+deploy/aws-chalice/.chalice
